--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
 target 'Segment-Adobe-Analytics_Example' do
+  platform :ios, '8.0'
   pod 'Segment-Adobe-Analytics', :path => '../'
 
   target 'Segment-Adobe-Analytics_Tests' do
@@ -8,4 +9,9 @@ target 'Segment-Adobe-Analytics_Example' do
     pod 'Expecta'
     pod 'OCMockito'
   end
+end
+
+target 'Segment-Adobe-Analytics_TVOS' do
+  platform :tvos, '9.0'
+  pod 'Segment-Adobe-Analytics', :path => '../'
 end
